# packse

./: .gitignore  CONTRIBUTING.md  README.md  _typos.toml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yaml  check.yaml  publish.yaml  release.yaml  test-packse-build.yaml  test.yaml  zizmor.yml
0.3.10/files/: dependency_excludes_range_of_compatible_versions_b-2.0.0-py3-none-any.whl  local_transitive_backtrack_b-2.0.0+bar-py3-none-any.whl  local_transitive_confounding_b-2.0.0-py3-any-macosx_10_0_ppc64.whl  local_transitive_greater_than_or_equal_b-2.0.0+foo-py3-none-any.whl  no_sdist_no_wheels_with_matching_abi_a-1.0.0-py3-MMMMMM-any.whl  package_prerelease_specified_mixed_available_a-0.1.0-py3-none-any.whl  package_yanked_specified_mixed_available_a-0.3.0-py3-none-any.whl  post_greater_than_or_equal_post_a-1.2.3.post1-py3-none-any.whl  post_local_greater_than_post_a-1.2.3.post0+local-py3-none-any.whl  post_local_greater_than_post_a-1.2.3.post0-py3-none-any.whl  python_greater_than_current_backtrack_a-1.0.0-py3-none-any.whl  python_greater_than_current_many_a-3.1.0-py3-none-any.whl  python_greater_than_current_many_a-3.4.0-py3-none-any.whl  transitive_package_only_yanked_in_range_b-1.0.0-py3-none-any.whl
0.3.10/simple-html/: index.html
0.3.11/files/: dependency_excludes_non_contiguous_range_of_compatible_versions_b-2.0.0-py3-none-any.whl  local_transitive_backtrack_b-2.0.0+foo-py3-none-any.whl  package_prerelease_specified_only_prerelease_available_a-0.1.0a1-py3-none-any.whl  post_simple_a-1.2.3.post1-py3-none-any.whl  requires_package_prerelease_and_final_any_a-1.0.0a1-py3-none-any.whl
0.3.12/files/: dependency_excludes_non_contiguous_range_of_compatible_versions_b-1.0.0-py3-none-any.whl  dependency_excludes_range_of_compatible_versions_a-2.0.0-py3-none-any.whl  dependency_excludes_range_of_compatible_versions_a-2.1.0-py3-none-any.whl  local_transitive_conflicting_a-1.0.0-py3-none-any.whl  local_transitive_less_than_or_equal_a-1.0.0-py3-none-any.whl  package_prereleases_global_boundary_a-0.2.0a1-py3-none-any.whl  post_equal_available_a-1.2.3-py3-none-any.whl  python_greater_than_current_many_a-3.3.0-py3-none-any.whl  requires_less_version_does_not_exist_a-4.0.0-py3-none-any.whl  transitive_prerelease_and_stable_dependency_many_versions_holes_c-1.0.0-py3-none-any.whl  transitive_prerelease_and_stable_dependency_many_versions_holes_c-2.0.0a9-py3-none-any.whl
0.3.13/files/: extra_incompatible_with_root_a-1.0.0-py3-none-any.whl  local_transitive_less_than_or_equal_b-2.0.0+foo-py3-none-any.whl  multiple_extras_required_b-1.0.0-py3-none-any.whl  package_prerelease_specified_only_final_available_a-0.3.0-py3-none-any.whl  package_prereleases_boundary_a-0.1.0-py3-none-any.whl  post_greater_than_or_equal_a-1.2.3.post1-py3-none-any.whl  python_greater_than_current_excluded_a-3.0.0-py3-none-any.whl  transitive_package_only_prereleases_in_range_b-1.0.0a1-py3-none-any.whl  transitive_prerelease_and_stable_dependency_many_versions_c-2.0.0a2-py3-none-any.whl  transitive_prerelease_and_stable_dependency_many_versions_holes_c-2.0.0b3-py3-none-any.whl  transitive_prerelease_and_stable_dependency_opt_in_c-2.0.0b1-py3-none-any.whl
0.3.14/files/: dependency_excludes_non_contiguous_range_of_compatible_versions_b-3.0.0-py3-none-any.whl  dependency_excludes_range_of_compatible_versions_a-2.2.0-py3-none-any.whl  direct_incompatible_versions_a-2.0.0-py3-none-any.whl  local_not_latest_a-1.2.3-py3-any-macosx_10_0_ppc64.whl  package_prereleases_specifier_boundary_a-0.2.0-py3-none-any.whl  python_greater_than_current_many_a-2.0.0-py3-none-any.whl  transitive_prerelease_and_stable_dependency_many_versions_holes_b-1.0.0-py3-none-any.whl  transitive_prerelease_and_stable_dependency_many_versions_holes_c-2.0.0a7-py3-none-any.whl  transitive_yanked_and_unyanked_dependency_c-1.0.0-py3-none-any.whl
0.3.15/files/: local_used_without_sdist_a-1.2.3-py3-any-macosx_10_0_ppc64.whl  package_multiple_prereleases_kinds_a-1.0.0a1-py3-none-any.whl  post_local_greater_than_a-1.2.3.post1+local-py3-none-any.whl  python_greater_than_current_many_a-3.0.0-py3-none-any.whl  transitive_package_only_prereleases_in_range_opt_in_a-0.1.0-py3-none-any.whl  transitive_prerelease_and_stable_dependency_opt_in_b-1.0.0-py3-none-any.whl
0.3.15/simple-html/: index.html
0.3.16/files/: only_wheels_a-1.0.0-py3-none-any.whl  post_equal_available_a-1.2.3.post0-py3-none-any.whl  post_local_greater_than_post_a-1.2.3.post1-py3-none-any.whl  transitive_prerelease_and_stable_dependency_many_versions_c-2.0.0b4-py3-none-any.whl  transitive_prerelease_and_stable_dependency_opt_in_a-1.0.0-py3-none-any.whl
0.3.17/files/: dependency_excludes_non_contiguous_range_of_compatible_versions_a-1.0.0-py3-none-any.whl  fork_basic_a-1.0.0-py3-none-any.whl  fork_marker_track_a-4.3.0-py3-none-any.whl  fork_marker_track_c-1.10-py3-none-any.whl  fork_non_fork_marker_transitive_c-2.0.0-py3-none-any.whl  fork_non_local_fork_marker_direct_c-1.0.0-py3-none-any.whl  incompatible_python_compatible_override_no_compatible_wheels_a-1.0.0-foo-none-any.whl  local_greater_than_or_equal_a-1.2.3+foo-py3-none-any.whl  local_transitive_backtrack_a-1.0.0-py3-none-any.whl  local_transitive_backtrack_a-2.0.0-py3-none-any.whl  no_build_a-1.0.0-py3-none-any.whl  (+4 more)
0.3.17/simple-html/: index.html
0.3.53/: index.html
aac0ff3/: index.html
provider-plugins/cpu-provider/: pyproject.toml
provider-plugins/cpu-provider/src/cpu_provider/: __init__.py
scenarios/: example.json  excluded.json  extras.json  incompatible-versions.json  local.json  post.json  prereleases.json  requires-does-not-exist.json  requires-incompatible-versions.json  requires-python.json  tag-and-markers.json  wheel-tags.json  wheels.json  yanked.json
scripts/: version
src/packse/templates/package/{{ package-name }}-{{ version }}/: pyproject.toml
tests/: common.py  conftest.py  test_build.py  test_build_pkg.py  test_fetch.py  test_index.py  test_inspect.py  test_list.py  test_publish.py  test_root.py  test_scenarios.py  test_view.py
(+5390 files in other folders)
