[project]
name = "cpu-provider"
version = "0.1.0"
description = "A mock CPU variants provider plugin controlled by PROVIDER_CPU_LEVEL"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" }
]
requires-python = ">=3.9"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
