[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ module-name }}"]

[tool.hatch.build.targets.sdist]
only-include = ["src/{{ module-name }}"]

[project]
name = "{{ package-name }}"
version = "{{ version }}"
dependencies = [{{# dependencies }}
    '''{{ . }}''',
{{/ dependencies }}]
requires-python = "{{ requires-python }}"
description = '''{{ description }}'''

[project.optional-dependencies]
{{# optional-dependencies }}
{{ name }} = [{{# dependencies }}
    '''{{ . }}''',
{{/ dependencies }}]
{{/ optional-dependencies }}
