[build-system]
requires = [
  "hatchling @ git+https://github.com/wheelnext/hatch@wheel-variant-support#subdirectory=backend",
  "packaging @ git+https://github.com/wheelnext/packaging@wheel-variants"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ module-name }}"]

[tool.hatch.build.targets.sdist]
only-include = ["src/{{ module-name }}"]

[project]
name = "{{ package-name }}"
version = "{{ version }}"
dependencies = [{{# dependencies }}
    '''{{ . }}''',
{{/ dependencies }}]
requires-python = "{{ requires-python }}"
description = '''{{ description }}'''

[project.optional-dependencies]
{{# optional-dependencies }}
{{ name }} = [{{# dependencies }}
    '''{{ . }}''',
{{/ dependencies }}]
{{/ optional-dependencies }}

{{# variants  }}

{{# default_priorities }}
[variant.default-priorities]
{{# namespace }}
namespace = {{ . }}
{{/ namespace }}
{{# feature }}
feature = {{ . }}
{{/ feature }}
{{# property }}
property = {{ . }}
{{/ property }}
{{/ default_priorities }}

{{# providers }}

[variant.providers.{{ label }}]
requires = {{ provider.requires }}

{{# provider.enable_if }}
enable-if = "{{ . }}"
{{/ provider.enable_if }}

{{# provider.optional }}
optional = {{ . }}
{{/ provider.optional }}

{{# provider.plugin_api }}
plugin-api = "{{ . }}"
{{/ provider.plugin_api }}

{{# provider.plugin_use }}
plugin-use = "{{ . }}"
{{/ provider.plugin_use }}

{{/ providers }}

{{/ variants }}